# mychatserver

./: CMakeLists.txt  README.md  a.out  readme.md  test.cpp
include/: public.hpp
include/server/: chatservice.hpp
include/server/kafka/: consumer.h  producer.h
include/server/log/: logger.h
include/server/model/: friend.hpp
include/server/nameserver/: NodeManager.h  ServerManager.h  dataserver_cli.h
rpcserver/: CMakeLists.txt  search.pb.cc  search.pb.h  search.proto
rpcserver/rpcee/: CMakeLists.txt  searchservice.cc
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatservice.cpp  data_serv.pb.cc  data_serv.pb.h  data_serv.proto  main.cpp
src/server/kafka/: consumer.cpp  producer.cpp
src/server/log/: logger.cpp
src/server/nameserver/: NameService.hpp  NodeManager.cpp  ServerManager.cpp
